istio/backend-virtualservice.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: backend
  namespace: fullstack
spec:
  hosts:
    - "*"
  gateways:
    - backend-gateway
  http:
    - match:
        - uri:
            prefix: /data
      route:
        - destination:
            host: backend
            port:
              number: 8080
